manifest/apps-kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dotnet
  namespace: dotnet-gitops
spec:
  port:
    targetPort: http
  # tls:
  #   termination: edge
  to:
    kind: Service
    name: dotnet
    weight: 100
  wildcardPolicy: None
